Alter database to embbed H2 Add Unzip method to JobFacade

--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,14 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <!--DatabaseDriver-->
+        <!--<dependency>-->
+            <!--<groupId>mysql</groupId>-->
+            <!--<artifactId>mysql-connector-java</artifactId>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <!--Logger-->
         <dependency>
