--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,4 @@ server.contextPath=/link/manager
 server.port=9090
 
 # SERVER PATH
-job.local.install=${user.home}/.dlucchesi/link/jobs
+job.local.install=e:\z_int
